Added replace methods and unit tests

--- a/StringTools/Exec/Exec.vcxproj
+++ b/StringTools/Exec/Exec.vcxproj
@@ -139,7 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Exec.cpp" />
+    <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StringTools\StringTools.vcxproj">
+      <Project>{0270ac5e-eba3-4d8f-8d50-995fd44959b4}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
