--- a/StringTools/StringTools/StringTools.vcxproj.filters
+++ b/StringTools/StringTools/StringTools.vcxproj.filters
@@ -15,6 +15,11 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="StringTools.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
     <ClCompile Include="StringTools.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
