--- a/StringTools/Test/Test.vcxproj.filters
+++ b/StringTools/Test/Test.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="Replace_String.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Lower.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
