Added method Upper()

--- a/StringTools/Test/Test.vcxproj.filters
+++ b/StringTools/Test/Test.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Lower.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="Upper.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
