--- a/StringTools/Test/Test.vcxproj
+++ b/StringTools/Test/Test.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Lower.cpp" />
     <ClCompile Include="Replace_Char.cpp" />
     <ClCompile Include="Replace_String.cpp" />
+    <ClCompile Include="Upper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
