Made Exec compile with cmake/clang

--- a/StringTools/Exec/CMakeLists.txt
+++ b/StringTools/Exec/CMakeLists.txt
@@ -6,5 +6,5 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(..)
 link_directories(../StringTools/cmake-build-debug)
 
-add_executable(Exec main.cpp)
+add_executable(Exec main.cpp ../Test/test.cpp)
 target_link_libraries(Exec Stringtools)
