Fixed bad project name in cmakelist

--- a/Src/StringTools/CMakeLists.txt
+++ b/Src/StringTools/CMakeLists.txt
@@ -3,4 +3,4 @@ project(StringTools)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(Stringtools StringTools.cpp)
+add_library(StringTools StringTools.cpp)
