--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -3,8 +3,8 @@ project(Tests)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(..)
-link_directories(../StringTools/cmake-build-debug)
+include_directories(../Src)
+link_directories(../Src/cmake-build-debug)
 
 add_executable(Tests
         Catch2.h
@@ -15,4 +15,4 @@ add_executable(Tests
         Replace_String.cpp
 )
 
-target_link_libraries(Tests Stringtools)
+target_link_libraries(Tests StringTools)
