--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -3,4 +3,7 @@ project(StringTools)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_library(StringTools StringTools.cpp)
+add_library(StringTools
+        StringTools.cpp
+        CharTools.cpp
+)
