--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -9,10 +9,22 @@ link_directories(../Src/cmake-build-debug)
 add_executable(Test
         Catch2.h
         main.cpp
-        Lower.cpp
-        Upper.cpp
-        Replace_Char.cpp
-        Replace_String.cpp
+
+        # StringTools-Tests
+        String__Lower.cpp
+        String__Upper.cpp
+        String__Replace_Char.cpp
+        String__Replace_String.cpp
+
+        # CharTools-Tests
+        Char__IsVowel.cpp
+        Char__IsLetter.cpp
+        Char__IsDigit.cpp
+        Char__IsUpper.cpp
+        Char__IsLower.cpp
+        Char__MakeUpper.cpp
+        Char__MakeLower.cpp
+        Char__CopySign.cpp
 )
 
 target_link_libraries(Test StringTools)
