Added padding functionality

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -16,6 +16,7 @@ add_executable(Test
         String__Replace_Char.cpp
         String__Replace_String.cpp
         String__Split.cpp
+        String__PadLeft.cpp
 
         # CharTools-Tests
         Char__IsVowel.cpp
